testdata/baselines/reference/submodule/conformance/jsdocTypeFromChainedAssignment2.errors.txt
use.js(1,19): error TS7016: Could not find a declaration file for module './mod'. 'mod.js' implicitly has an 'any' type.


==== use.js (1 errors) ====
    var mod = require('./mod');
                      ~~~~~~~
!!! error TS7016: Could not find a declaration file for module './mod'. 'mod.js' implicitly has an 'any' type.
    mod.f('no')
    mod.g('also no')
    mod.h(0)
    mod.i(1)
    
==== mod.js (0 errors) ====
    /** @param {number} n */
    exports.f = exports.g = function fg(n) {
        return n + 1
    }
    /** @param {string} mom */
    module.exports.h = module.exports.i = function hi(mom) {
        return `hi, ${mom}!`;
    }
    